# VeX

./: .gitignore  README.md  build.sh
plugin/: CMakeLists.txt  IndexKmeansShard.cpp  IndexKmeansShard.h  IndexKmeansShardFinegrained.cpp  IndexKmeansShardFinegrained.h  IndexRandomlyShard.cpp  IndexRandomlyShard.h  IndexShardBase.cpp  IndexShardBase.h  dma_copy_core_modified.c  dma_copy_core_modified.h
scripts/: build_index.cpp  run_build.sh  run_search.sh  search_index.cpp
